[build-system]
requires = [
    "setuptools>=80.9.0",
    "setuptools-git-versioning>=2.1.0",
    "wheel>=0.45.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "pumpe"
dynamic = ["version"]
description = "Pumping base classes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioitertools>=0.12.0",
    "fast-depends>=2.4.12",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest-asyncio>=1.1.0",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "setuptools>=80.9.0",
    "setuptools-git-versioning>=2.1.0",
    "sqlalchemy[aiosqlite]>=2.0.43",
    "wheel>=0.45.1",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["EM", "TRY003", "D1", "FA"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
no-lines-before = ["standard-library"]
known-third-party = []

[tool.ruff.lint.extend-per-file-ignores]
"*_test.py" = ["S101", "S311"]


[tool.mypy]
strict = true


[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_env]
BITRIX24_API_WEBHOOK_URL = "https://bitrix24.com/rest/0/test/"


[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
